# lms-chatboat

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  directory_creation.py  main.py  pyproject.toml  requirements.txt  test_llm.py
agents/: lms_agent.py
chains/: concept_explainer.py  counseling_chain.py  course_lookup.py  course_recommender.py  faq_chain.py
config/: settings.py
data/: sample_courses.json
prompts/: concept_explainer_prompt.txt  counseling_prompt.txt  course_lookup_prompt.txt  course_recommendation_prompt.txt  faq_prompt.txt  intent_classifier_prompt.txt  recommend_prompt.txt
tools/: lms_api_tool.py
utils/: course_data_loader.py  exception_handler.py  helpers.py  llm_provider.py  logger.py  prompt_loader.py  settings.py
