[project]
name = "lms-chat-boat"
version = "0.1.0"
description = "LangChain-powered FastAPI chatbot with Groq and Gemini support"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core Framework
    "fastapi",
    "uvicorn[standard]",

    # LangChain Ecosystem
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    "langgraph",
    "langsmith",

    # LLM Providers
    "openai",
    "groq",

    # Environment & Config
    "python-dotenv",
    "pydantic-settings",

    # Observability & Logging
    "loguru",
    "rich",

    # HTTP & API Utilities
    "requests",
    "httpx",

    # Optional: Data & Parsing
    "pandas",
    "numpy",

    # Optional: Dev Tools
    "uv"
]
